# GameTest

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.bat
.github/ISSUE_TEMPLATE/: bug_report.md
gameres/: resources.json
gameres/shaders/: colorVert.glsl  textVert.glsl
gameres/sounds/: bow_attack.flac  enemy_spawn.flac  executioner_attack.flac  mortar_attack_1.flac  mortar_attack_2.flac  mortar_fall.flac  tower_spawn.flac
includes/EngineCore/: Application.h  Engine.h  Event.h  IComponent.h  IGame.h  IGameObject.h  Input.h  Keys.h  UImodule.h  Window.h
includes/EngineCore/Components/: Highlight.h  MeshRenderer.h  SpriteRenderer.h  Transform.h
includes/EngineCore/Editor/: EditorApplication.h
includes/EngineCore/Engine/: Application.h  Engine.h  Window.h
includes/EngineCore/GUI/: AlertSystem.h  Bar.h  BindButton.h  Button.h  ChatBox.h  CheckBox.h  Font.h  FontRenderer.h  GUI_element.h  GUI_place.h  InputField.h  ScrollBox.h  Slider.h  Sprite.h  Square.h  Table.h  TextRenderer.h
includes/EngineCore/Light/: DirectionalLight.h  PointerLight.h
includes/EngineCore/Meshes/: Cube.h  EmptyObject.h  GraphicsModel.h  Grid.h  ObjModel.h  Plane.h  Skybox.h  Sprite.h
includes/EngineCore/Network/: WinSock.h
includes/EngineCore/Physics/: Collider.h  MoveController.h  PhysicsEngine.h  Ray.h
includes/EngineCore/Renderer/: Animation.h  Animator.h  Camera.h  Circle.h  FrameBuffer.h  IndexBuffer.h  Line.h  Material.h  Point.h  PostProcessor.h  Renderer.h  ShaderProgram.h  ShaderProgramLayout.h  ShowOutline.h  Sprite.h  Texture2D.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
includes/EngineCore/Renderer3D/: GraphicsObject.h  MeshRenderer.h  Particle.h  ParticleSystem.h  Skybox.h  Texture3D.h
includes/EngineCore/Resources/: LanguagePack.h  RegistryManager.h  ResourceManager.h  Scene.h
includes/EngineCore/Sound/: Sound.h  SoundEngine.h  SoundSet.h
includes/EngineCore/System/: AppInfo.h  CommandManager.h  Event.h  INI_loader.h  ImageLoader.h  Input.h  Keys.h  List.h  Loaders.h  Log.h  LogSystem.h  ShadersSettings.h  Stopwatch.h  SysFunc.h  Timer.h
includes/EngineCore/UI/: UIlayout.h  UIlayouts.h
includes/Games/: GameApplication.h
includes/Games/Tower_Defense/: ArcherTower.h  BaseEffect.h  BaseEnemy.h  BaseTower.h  Castle.h  DamageList.h  DamageTable.h  Enemy.h  EnemyBug.h  EnemyMagician.h  EnemyMonkey.h  EnemyProfessor.h  EnemyRobot.h  EnemySpider.h  FreezeEffect.h  GameApplication.h  HealthBar.h  HealthEffect.h  IceTower.h  MortarTower.h  Target.h  TowerArcher.h  TowerExecutioner.h  TowerIce.h  TowerInferno.h  TowerMortar.h
res/: resources.json
res/langpacks/: en.language  ru.language
res/models/: inferno_tower.mtl  tower.mtl
res/shaders/: colorFrag.glsl  colorVert.glsl  default3DFrag.glsl  default3DVert.glsl  fragment.frag  lightCubeFrag.glsl  lightCubeVert.glsl  shape.vert  shape3D.frag  shape3D.vert  shape3DFrag.glsl  shape3DVert.glsl  shapeFrag.glsl  shapeVert.glsl  sprite.frag  sprite.vert  spriteFrag.glsl  spriteVert.glsl  textFrag.glsl  textVert.glsl  vertex.txt  vertex.vert
res/sounds/: click.flac  mortar_attack_1.flac  test.flac  tower_attak.flac
src/: appinfo.rc  main.cpp
src/Components/: Highlight.cpp  MeshRenderer.cpp  SpriteRenderer.cpp  Transform.cpp
src/Editor/: EditorApplication.cpp
src/Editor/UI/: UIlayouts.cpp  UImodule.cpp
src/Engine/: Application.cpp  Engine.cpp  Engine.h  IComponent.h  IGame.h  IGameObjec.h  Input.cpp  UImodule.cpp  Window.cpp
src/Examples/: BrickWall.cpp  ColliderDemoGame.cpp  ColliderDemoGame.h  GameApplication.cpp  SnakeDemoGame.cpp  SnakeDemoGame.h  SnakePart.cpp  Tank.h
src/Examples/ColliderDemo/: BrickWall.cpp  BrickWall.h  ColliderDemoGame.cpp  ColliderDemoGame.h  Tank.cpp  Tank.h
src/Examples/PongDemo/: Ball.cpp  Ball.h  PongDemoGame.cpp  PongDemoGame.h  PongObject.cpp  PongObject.h
src/Examples/SnakeDemo/: SnakeDemoGame.cpp  SnakeDemoGame.h  SnakePart.h
src/Examples/TanksDemo/: BrickWall.cpp  BrickWall.h  Bullet.cpp  Bullet.h  Tank.cpp  Tank.h  TanksDemoGame.cpp  TanksDemoGame.h
src/Examples/Tower_Defense/: ArcherTower.cpp  BaseEffect.cpp  BaseEnemy.cpp  BaseTower.cpp  Castle.cpp  Enemy.cpp  EnemyBug.cpp  (+16 more)
src/GUI/: AlertSystem.cpp  Bar.cpp  BindButton.cpp  Button.cpp  ChatBox.cpp  CheckBox.cpp  Font.cpp  FontRenderer.cpp  GUI_place.cpp  InputField.cpp  ScrollBox.cpp  Slider.cpp  Sprite.cpp  Square.cpp  Table.cpp  TextRenderer.cpp
src/Game/: BrickWall.cpp  BrickWall.h  Game.cpp  Game.h  IComponent.h  IGameObjec.h  Tank.cpp  Tank.h
src/Light/: DirectionalLight.cpp  PointerLight.cpp
src/Meshes/: Cube.cpp  GraphicsModel.cpp  Grid.cpp  ObjModel.cpp  Plane.cpp  Skybox.cpp  Sprite.cpp
src/Network/: WinSock.cpp
src/Physics/: CharacterController.cpp  CharacterController.h  Collider.cpp  Collider.h  MoveController.cpp  MoveController.h  PhysicsEngine.cpp  PhysicsEngine.h  Ray.cpp
src/Renderer/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animator.cpp  Animator.h  Camera.cpp  Camera.h  Circle.cpp  FrameBuffer.cpp  IndexBuffer.cpp  IndexBuffer.h  Line.cpp  Material.cpp  Point.cpp  Point.h  PostProcessor.cpp  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramLayout.cpp  ShowOutline.cpp  ShowOutline.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/Renderer3D/: GraphicsObject.cpp  MeshRenderer.cpp  Particle.cpp  ParticleSystem.cpp  Skybox.cpp  Texture3D.cpp
src/Resources/: LanguagePack.cpp  RegistryManager.cpp  ResourceManager.cpp  ResourceManager.h  Scene.cpp  stb_image.h
src/Sound/: Sound.cpp  SoundEngine.cpp  SoundSet.cpp  miniaudio.c  miniaudio.cpp
src/System/: CommandManager.cpp  INI_loader.cpp  ImageLoader.cpp  Loaders.cpp  LogSystem.cpp  Stopwatch.cpp  SysFunc.cpp  TemplateTimer.h  Timer.cpp  Timer.h
src/UI/: UIlayouts.cpp  UImodule.cpp
systemres/: resources.json
systemres/langpacks/: en.language  ru.language
systemres/shaders/: textFrag.glsl
systemres/sounds/: freeze_attack.flac  mortar_attack_0.flac  upgrade.flac
(+2 files in other folders)
